-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 11.0.2, Qt Creator 13.0.2
-
-
f15b5d663 (15.0)
It quite simply doesn't process anything you do to the Environment in the build&run settings. It can easily be verified by just outputting your favorite environment variable via qDebug() in your application. It works when running directly, but not when profiling.
I've been on a wild goose chase for a while due to this.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-29635 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
600185,2 | PerfProfiler: Apply environment before starting | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
600757,1 | PerfProfiler: Apply environment before starting | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |