PerfProfiler: Apply environment before starting

Fixes: QTCREATORBUG-29635
Change-Id: Ibeaee6f57dea0676685e216ef32dffa3a7aee1e7
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>